--- a/network.yml
+++ b/network.yml
@@ -66,7 +66,7 @@ Resources:
             CidrBlock: !Ref PublicSubnet1CIDR
             Tags:
                 - Key: Name
-                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
+                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
     
     PublicSubnet2:
         Type: AWS::EC2::Subnet
@@ -144,7 +144,7 @@ Resources:
             RouteTableId: !Ref PublicRouteTable
             SubnetId: !Ref PublicSubnet1
 
-    PublicSubnet1RouteTableAssociation:
+    PublicSubnet2RouteTableAssociation:
         Type: AWS::EC2::SubnetRouteTableAssociation
         Properties:
             RouteTableId: !Ref PublicRouteTable
@@ -198,58 +198,58 @@ Outputs:
         Description: A reference to the VPC
         Value: !Ref VPC
         Export:
-          Name: !Sub ${EnvironmentName}-VPCID
+            Name: !Sub ${EnvironmentName}-VPCID
 
     VPCPublicRouteTable:
         Description: Public Routing
         Value: !Ref PublicRouteTable
         Export:
-          Name: !Sub ${EnvironmentName}-PUB-RT
+            Name: !Sub ${EnvironmentName}-PUB-RT
 
     VPCPrivateRouteTable1:
         Description: Private Routing AZ1
         Value: !Ref PrivateRouteTable1
         Export:
-          Name: !Sub ${EnvironmentName}-PRI-RT1
+            Name: !Sub ${EnvironmentName}-PRI-RT1
 
     VPCPrivateRouteTable2:
         Description: Private Routing AZ2
         Value: !Ref PrivateRouteTable2
         Export:
-          Name: !Sub ${EnvironmentName}-PRI-RT2
+            Name: !Sub ${EnvironmentName}-PRI-RT2
 
     PublicSubnets:
         Description: A list of the public subnets
         Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
         Export:
-          Name: !Sub ${EnvironmentName}-PUB-NETS
+            Name: !Sub ${EnvironmentName}-PUB-NETS
 
     PrivateSubnets:
         Description: A list of the private subnets
         Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
         Export:
-          Name: !Sub ${EnvironmentName}-PRIV-NETS
+            Name: !Sub ${EnvironmentName}-PRIV-NETS
 
     PublicSubnet1:
         Description: A reference to the public subnet in the 1st Availability Zone
         Value: !Ref PublicSubnet1
         Export:
-          Name: !Sub ${EnvironmentName}-PUB-SN1
+            Name: !Sub ${EnvironmentName}-PUB-SN1
 
     PublicSubnet2: 
         Description: A reference to the public subnet in the 2nd Availability Zone
         Value: !Ref PublicSubnet2
         Export:
-          Name: !Sub ${EnvironmentName}-PUB-SN2
+            Name: !Sub ${EnvironmentName}-PUB-SN2
 
     PrivateSubnet1:
         Description: A reference to the private subnet in the 1st Availability Zone
         Value: !Ref PrivateSubnet1
         Export:
-          Name: !Sub ${EnvironmentName}-PRI-SN1
+            Name: !Sub ${EnvironmentName}-PRI-SN1
 
     PrivateSubnet2: 
         Description: A reference to the private subnet in the 2nd Availability Zone
         Value: !Ref PrivateSubnet2
         Export:
-          Name: !Sub ${EnvironmentName}-PRI-SN2  
+            Name: !Sub ${EnvironmentName}-PRI-SN2  
